# lifescript/habittracker backend/habittracker/src/main/java/com/lxisoft/habittracker/entity/HabitEntity.java
@@ -1,30 +1,29 @@
 package com.lxisoft.habittracker.entity;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 
 @Entity
 public class HabitEntity{
 
 @Id
 private Long id;
-
-private String name;
+private String duration;
 private String habit;
 private String description;
+
+@OneToMany(mappedBy = "habit") 
+private List<Task> tasks = new ArrayList<>();
 
     public void setId(Long id) {
         this.id = id;
     }
     public Long getId() {
         return id;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-    public String getName() {
-        return name;
     }
 
     public void setDescription(String description) {
@@ -39,6 +38,13 @@ private String description;
     }
     public void setHabit(String habit) {
         this.habit = habit;
+    }
+
+    public String getDuration() {
+        return duration;
+    }
+    public void setDuration(String duration) {
+        this.duration = duration;
     }
 
 }
